@@ -5,6 +5,8 @@
 - Additional parameters in Oracle subagent for redo logs and ASM monitoring
 - NXSL: variable $errormsg iholding error description set in catch block
 - Default interface expected state can be configured
+- GPS subagent (provides location data from NMEA compatible GPS receivers)
+- Server can update node location using GPS subagent
 - Fixed error while event alarm linking multiple times
 - Fixed issues: #962, #988, #1048, #1124
 
